--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="shared_preferences_file">OculusApertor</string>
+    <string name="app_intro_skip">Skip</string>
 </resources>
